<resources>
    <string name="app_name">最美社区</string>
    <string name="square">广场</string>
    <string name="main">我的</string>
    <string name="viewed_amount">%s次浏览</string>
    <string name="invite_amount">%s人在邀请</string>
    <string name="punch_amount">%s人已完成</string>
    <string name="share">分享</string>
    <string name="comment">评论</string>
    <string name="local_album_content">手机里发现很多好看的照片，点这里分享给大家，马上赚金币提现！</string>
    <string name="local_album_notice">注：以上照片重新自动上传到平台</string>
    <string name="share_now">立即分享</string>
    <string name="punch_content">今天你还没有签到哦，马上签到得%s金币！</string>
    <string name="invite_content">邀请别人使用这个APP，马上可以得到%s金币奖励！随时提现〜</string>
    <string name="punch_now">立即签到</string>
    <string name="punch_every_day_money">每天签到赚金币</string>
    <string name="invite_friend_money">邀请好友赚金币</string>
    <string name="invite_now">立即邀请</string>
    <string name="view">浏览</string>
    <string name="today">今天</string>
    <string name="tomorrow">明天</string>
    <string name="acquired">后天</string>
    <string name="operate_for_money">发表内容得奖励，\n随时提现不封顶!</string>
    <string name="make_gif">制作表情</string>
    <string name="make">制作</string>
    <string name="use">使用</string>

    <array name="slide_bar_value_list">
        <item>\u0023</item>
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </array>
    <string name="publish">发表</string>
    <string name="input_want_say">输入想对大家说的话...</string>
    <string name="try_album">照片很多，试试影集功能，效果更好看</string>
    <string name="app_update">软件更新</string>
    <string name="app_praise">给软件好评</string>
    <string name="logout">退出登录</string>
    <string name="invite_rule1">1.每成功邀请一位新用户（以下或称“好友”），您可以将活动页面通过微信分享给好友，好友首次装简单天气并成功绑定微信或手机号，则视为邀请成功，邀请者首次可获得10000金币，后续可获得8000金币奖励；（注：邀请码为本平台为每位用户设立的独立ID号，用于邀请好友时使用，且每位用户只能填写一次邀请码）。
</string>
    <string name="invite_rule2">2.每位新用户只能被邀请一次，同一微信号，同一手机号，同一设备都视为同一个用户。</string>
    <string name="invite_rule3">3.邀请奖励会自动发放至您的账户，请在“我的”-“钱包”中查看，系统仅保存您最近7天金币记录，请注意查收。</string>
    <string name="invite_rule4">4.邀请好友数量无上限，邀请越多奖励越多。</string>
    <string name="invite_rule5">5.对于存在非正常邀请行为的用户，平台将取消其参加活动的资格，并扣除相应的奖励不予结算。</string>
    <string name="invite_improve">分享到微信群，成功率</string>
    <string name="protocol_desc">在您使用最美社区APP服务前，请认真阅读%s和%s的全部条款，您同意并接受全部条款后再开始使用我们的服务。</string>
    <string name="user_protocol">《用户协议》</string>
    <string name="privacy">《隐私政策》</string>
    <string name="disagree">不同意</string>
    <string name="agree">同意</string>
    <string name="select_movie_template">选择模版</string>
    <string name="confirm_logout">确定退出登录？</string>
    <string name="company">重庆可兰达科技有限公司</string>
    <string name="post_cancel_confirm">您的内容还没有发表出去\n确定要放弃吗？</string>
    <string name="cancel">取消</string>
    <string name="confirm_abandon">确定放弃</string>
</resources>