<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <com.youloft.senior.widgt.PostHeaderView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_post_item_bg_other"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15sp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/punch_content"
            android:textColor="#FF333333"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.youloft.senior.widgt.PunchMoneyView
            android:id="@+id/pv_today"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toStartOf="@id/pv_tomorrow"
            app:layout_constraintStart_toStartOf="@id/tv_content"
            app:layout_constraintTop_toBottomOf="@id/tv_content"
            app:pv_date="@string/today"
            app:pv_money="+1000" />


        <com.youloft.senior.widgt.PunchMoneyView
            android:id="@+id/pv_tomorrow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            app:layout_constraintEnd_toStartOf="@id/pv_acquired"
            app:layout_constraintStart_toEndOf="@id/pv_today"
            app:layout_constraintTop_toTopOf="@id/pv_today"
            app:pv_date="@string/tomorrow"
            app:pv_money="+1000"

            />

        <com.youloft.senior.widgt.PunchMoneyView
            android:id="@+id/pv_acquired"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/pv_tomorrow"
            app:layout_constraintTop_toTopOf="@id/pv_today"
            app:pv_date="@string/acquired"
            app:pv_money="+1000" />


        <View
            android:id="@+id/line"
            style="@style/line_horizontal"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pv_today" />


        <com.noober.background.view.BLButton
            android:id="@+id/btn_punch"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/punch_now"
            android:textSize="19sp"
            app:bl_corners_radius="50dp"
            app:bl_selected_solid_color="#FFF6DFCC"
            app:bl_selected_textColor="#FFBB7858"
            app:bl_unSelected_solid_color="#FFFF7445"
            app:bl_unSelected_textColor="#FFFFFFFF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>