<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:background="#FFEAEAEA"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_share"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:drawableStart="@drawable/ic_home_share"
        android:drawablePadding="4dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/share"
        android:textColor="#FF777777"
        android:textSize="19sp"
        app:layout_constraintEnd_toStartOf="@id/line2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line" />


    <View
        android:id="@+id/line2"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FFEAEAEA"
        app:layout_constraintBottom_toBottomOf="@id/tv_share"
        app:layout_constraintEnd_toStartOf="@id/tv_comment"
        app:layout_constraintStart_toEndOf="@id/tv_share"
        app:layout_constraintTop_toTopOf="@id/tv_share" />

    <TextView
        android:id="@+id/tv_comment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:drawableStart="@drawable/ic_home_comment"
        android:drawablePadding="4dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/comment"
        android:textColor="#FF777777"
        android:textSize="19sp"
        app:layout_constraintEnd_toStartOf="@id/line1"
        app:layout_constraintStart_toEndOf="@id/line2"
        app:layout_constraintTop_toBottomOf="@id/line" />

    <View
        android:id="@+id/line1"
        android:layout_width="1dp"
        android:layout_height="0dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:background="#FFEAEAEA"
        app:layout_constraintBottom_toBottomOf="@id/tv_share"
        app:layout_constraintEnd_toStartOf="@id/tv_praise"
        app:layout_constraintStart_toEndOf="@id/tv_comment"
        app:layout_constraintTop_toTopOf="@id/tv_share" />


    <com.noober.background.view.BLTextView
        android:id="@+id/tv_praise"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="51dp"
        android:layout_marginEnd="30dp"
        android:drawableStart="@drawable/sr_home_praise_icon"
        android:drawablePadding="4dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:text="@string/view"
        android:textColor="#FF777777"
        android:textSize="19sp"
        app:layout_constraintBottom_toBottomOf="@id/tv_share"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/line1"
        app:layout_constraintTop_toTopOf="@id/tv_share" />


</androidx.constraintlayout.widget.ConstraintLayout>