<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <include
        layout="@layout/item_post_header_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_post_item_bg_other"
        android:paddingStart="15dp"
        android:paddingTop="10dp"
        android:paddingEnd="15sp"
        android:paddingBottom="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/header">

        <TextView
            android:id="@+id/tv_content"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/local_album_content"
            android:textColor="#FF333333"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.youloft.senior.widgt.PostItemAlbum
            android:id="@+id/album"
            android:layout_width="315dp"
            android:layout_height="315dp"
            android:layout_marginTop="10dp"
            android:src="@drawable/ic_placeholder_error"
            app:layout_constraintEnd_toEndOf="@id/tv_content"
            app:layout_constraintStart_toStartOf="@id/tv_content"
            app:layout_constraintTop_toBottomOf="@id/tv_content" />


        <View
            android:id="@+id/line"
            style="@style/line_horizontal"
            android:layout_marginTop="18dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/album" />

        <TextView
            android:id="@+id/tv_notice"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:text="@string/local_album_notice"
            android:textColor="#FF999999"
            android:textSize="17sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <com.noober.background.view.BLButton
            android:id="@+id/btn_share"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="@null"
            android:padding="5dp"
            android:text="@string/share_now"
            android:textColor="#FFFFFFFF"
            android:textSize="19sp"
            app:bl_corners_radius="50dp"
            app:bl_solid_color="#FFFF7445"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_notice" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>